syntax = "proto3";

package pb;

option go_package = "github.com/siddheshRajendraNimbalkar/upload-backend/pb";

import "google/api/annotations.proto";

service FileUploadService {
    rpc InitUpload(InitRequest) returns (InitResponse);
    rpc UploadFile(stream FileChunk) returns (UploadStatus);
    rpc GetUploadedChunks(GetChunksRequest) returns (GetChunksResponse);
    rpc DownloadFile(DownloadRequest) returns (DownloadResponse) {
        option (google.api.http) = {
            get: "/v1/files/{file_id}"
        };
    }
    rpc GetUploadMetadata(GetMetadataRequest) returns (UploadMetadata) {
        option (google.api.http) = {
            get: "/v1/uploads/{file_id}/metadata"
        };
    }
}

message FileChunk {
    string file_id = 1;
    string file_name = 2;
    string user_id = 3;
    int64 chunk_index = 4;
    int64 total_chunks = 5;
    bytes content = 6;
}

message DownloadRequest {
    string file_id = 1;
}

message DownloadResponse {
  bytes content = 1;
  string file_name = 2;
}

message UploadStatus {
    bool success = 1;
    string message = 2;
    string stored_path = 3;
}

message GetChunksRequest {
    string file_id = 1;
}

message GetChunksResponse {
    repeated int64 uploaded_chunks = 1;
}

message GetMetadataRequest {
    string file_id = 1;
}

message UploadMetadata {
    string file_id = 1;
    string file_name = 2;
    int64 size = 3;
    repeated int64 uploaded_chunks = 4;
    string status = 5;
}

message InitRequest {
    string file_name = 1;
    int64 total_chunks = 2;
    string user_id = 3;
}

message InitResponse {
    string file_id = 1;
}
